Added: Complete handle docker to project
